--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -38,6 +38,7 @@ header {
   width: 100%;
   background-color: rgb(33, 37, 41);
   box-shadow: 0 -3px 31px 0 rgba(0, 0, 0, .05), 0 6px 20px 0 rgba(0, 0, 0, .02);
+  z-index: 10;
 }
 
 .auth-wrapper.auth-v1 {
@@ -113,6 +114,90 @@ header {
   cursor: pointer;
 }
 
+.dropdown-menu {
+  z-index: 1000;
+}
+
+
 .mr-50, .mx-50 {
   margin-right: 0.5rem!important;
+}
+
+.misc-wrapper {
+  display: flex;
+  flex-basis: 100%;
+  min-height: 100vh;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+.brand-logo {
+  left: 2rem;
+}
+
+.misc-wrapper .brand-logo {
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  top: 2rem;
+}
+
+.misc-wrapper .brand-logo img {
+  max-width: 150px;
+}
+
+.misc-wrapper .misc-inner {
+  position: relative;
+  max-width: 750px;
+}
+
+.table-header {
+  padding: 2rem 0 1rem;
+}
+
+.recharts-wrapper {
+  height: 350px;
+}
+
+.recharts-tooltip-wrapper {
+  box-shadow: 2px 2px 6px -4px #999;
+}
+
+.recharts-tooltip-wrapper {
+  padding: 0.75rem;
+  background-color: #fff;
+  border-radius: 5px;
+  border: 1px solid #ebe9f1;
+}
+
+.react-dataTable .rdt_TableBody .rdt_TableRow .rdt_TableCell {
+  padding: 0 1rem!important;
+}
+
+.react-dataTable .rdt_TableBody .rdt_TableRow .rdt_TableCell {
+  height: auto!important;
+  flex-wrap: wrap;
+}
+
+.rdt_TableCell {
+  overflow: visible !important;
+}
+.dataTables_wrapper .dataTables_paginate {
+  overflow: visible;
+}
+
+#salonVideo {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  object-fit: cover;
+}
+
+.active {
+  color: red;
 }
